--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,6 @@ export(plot_batch_gwas)
 export(plot_batch_titv)
 export(plot_physcores)
 export(plot_snp_circos)
+export(plot_snp_network)
 export(query_snp)
 export(screenshot_GenomeBroswer)
-export(summary_vep)
