--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,11 @@ export(plot_batch_cCREs)
 export(plot_batch_consequence)
 export(plot_batch_gwas)
 export(plot_batch_titv)
+export(plot_loop_gene)
+export(plot_loop_snp)
 export(plot_physcores)
 export(plot_snp_circos)
+export(plot_snp_motif)
 export(plot_snp_network)
 export(query_snp)
 export(screenshot_GenomeBroswer)
