--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,8 @@ Depends:
     liftOver,    
     circlize,    
     biomaRt,
+    igraph,
+    ComplexHeatmap,
     tidyverse
 RoxygenNote: 7.2.0
 Suggests: 
