--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,9 @@ export(plot_snp_motif)
 export(plot_snp_network)
 export(query_snp)
 export(screenshot_GenomeBroswer)
+export(analyze_ccre_enrich)
+export(analyze_gene_go)
+export(analyze_gwas_enrich)
+export(get_batch_vep)
+export(get_batch_SNP_info)
+export(theme_snp)
