--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,9 @@ Depends:
     biomaRt,
     igraph,
     ComplexHeatmap,
+    enrichplot,
+    clusterProfiler,
+    bedtoolsr,
     tidyverse
 RoxygenNote: 7.2.0
 Suggests: 
